Moved prop types to regular dependency

--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "npm-install-peers": "^1.2.1",
     "react-dom": "^16.12.0"
   },
-  "peerDependencies": {
-    "react": "^16.3.0",
+  "dependencies": {
     "prop-types": "^15.6.2"
+  },
+  "peerDependencies": {
+    "react": "^16.3.0"
   },
   "homepage": "https://github.com/input-output-hk/front-end-site-components#readme"
 }
