--- a/package.json
+++ b/package.json
@@ -78,11 +78,11 @@
     "react-dom": "^16.12.0"
   },
   "dependencies": {
-    "@input-output-hk/front-end-core-components": "^0.1.2",
-    "prop-types": "^15.6.2",
-    "react-icons": "^3.9.0"
+    "prop-types": "^15.6.2"
   },
   "peerDependencies": {
+    "@input-output-hk/front-end-core-components": "0.1.2",
+    "react-icons": "^3.9.0",
     "react": "^16.3.0"
   },
   "homepage": "https://github.com/input-output-hk/front-end-site-components#readme"
