--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@input-output-hk/front-end-site-components",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Opinionated React components for IOHK's front-end web team",
   "main": "components/index.js",
   "watch": {
@@ -9,17 +9,10 @@
         "src"
       ],
       "extensions": "js"
-    },
-    "build:css": {
-      "patterns": [
-        "src"
-      ],
-      "extensions": "scss"
     }
   },
   "scripts": {
-    "build": "npm run clean && npm run build:css && npm run build:js",
-    "build:css": "node ./scripts/buildCSS.js",
+    "build": "npm run clean && npm run build:js",
     "build:js": "babel src --out-dir components --source-maps inline",
     "clean": "rm -rf ./components",
     "lint": "eslint src/**/*.js",
@@ -72,7 +65,6 @@
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^24.8.0",
-    "node-sass": "^4.13.1",
     "npm-install-peers": "^1.2.1",
     "npm-watch": "^0.6.0",
     "react-dom": "^16.12.0"
@@ -82,7 +74,8 @@
     "react-icons": "^3.9.0"
   },
   "peerDependencies": {
-    "@input-output-hk/front-end-core-components": "^0.1.2",
+    "@input-output-hk/front-end-core-components": "^0.1.6",
+    "styled-components": "^5.0.1",
     "react": "^16.3.0"
   },
   "homepage": "https://github.com/input-output-hk/front-end-site-components#readme"
