Using @input-output-hk/front-end-core-libraries to get letter spacing values

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   },
   "peerDependencies": {
     "@input-output-hk/front-end-core-components": "^1.0.0",
+    "@input-output-hk/front-end-core-libraries": "^1.1.0",
     "styled-components": "^5.0.1",
     "react": "^16.3.0"
   },
